force-app/main/default/objects/Account/fields/Differential_Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Differential_Request_Method__c</fullName>
    <label>差异请求方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>