force-app/main/default/objects/Account/fields/Ecss_Flag__c.field-meta.xml
<CustomField>
    <fullName>Ecss_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true:跳过</description>
    <label>Ecss Flag</label>
    <type>Checkbox</type>
</CustomField>