force-app/main/default/objects/Account/fields/EDI_ID2__c.field-meta.xml
<CustomField>
    <fullName>EDI_ID2__c</fullName>
    <label>EDI ID2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>