force-app/main/default/objects/Account/fields/EDI_ID__c.field-meta.xml
<CustomField>
    <fullName>EDI_ID__c</fullName>
    <label>EDI ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>