force-app/main/default/objects/Account/fields/Eliminate_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Eliminate_Approval_Status__c</fullName>
    <label>Eliminate Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Processes_Status</valueSetName>
    </valueSet>
</CustomField>