force-app/main/default/objects/Account/fields/Email_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Email_Multiple__c</fullName>
    <label>Email Multiple</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>