force-app/main/default/objects/Account/fields/ExcodeLen__c.field-meta.xml
<CustomField>
    <fullName>ExcodeLen__c</fullName>
    <formula>LEN( External_Key__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExcodeLen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>