force-app/main/default/objects/Account/fields/Expected_Hisense_cooperation_annual_scal__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hisense_cooperation_annual_scal__c</fullName>
    <description>预计海信合作年规模</description>
    <label>Expected Hisense cooperation annual scal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>