force-app/main/default/objects/Account/fields/ExternalIDFormula__c.field-meta.xml
<CustomField>
    <fullName>ExternalIDFormula__c</fullName>
    <formula>IF( ISNUMBER( External_Key__c ) ,  LEN(External_Key__c ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalIDFormula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>