force-app/main/default/objects/Account/fields/FormerName__c.field-meta.xml
<CustomField>
    <fullName>FormerName__c</fullName>
    <label>FormerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>