force-app/main/default/objects/Account/fields/Goods_Form__c.field-meta.xml
<CustomField>
    <fullName>Goods_Form__c</fullName>
    <label>货物形态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>パレット</fullName>
            </value>
            <value>
                <fullName>シートパレット</fullName>
            </value>
            <value>
                <fullName>バラ積み</fullName>
            </value>
            <value>
                <fullName>専用パレット</fullName>
            </value>
            <value>
                <fullName>その他（＋コメント）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>