force-app/main/default/objects/Account/fields/Guarantor_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Country_Code__c</fullName>
    <label>Country/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>