force-app/main/default/objects/Account/fields/Have_Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>Have_Parent_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Parent Customer</label>
    <type>Checkbox</type>
</CustomField>