force-app/main/default/objects/Account/fields/Hisense_Actual_Sales_Income_Ratio_N_Year__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Actual_Sales_Income_Ratio_N_Year__c</fullName>
    <description>N年实际销售收入比率</description>
    <inlineHelpText>The proportion of Hisense sales amount of customer total sales amount in current year.</inlineHelpText>
    <label>Actual Sales Income Ratio(N Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>