force-app/main/default/objects/Account/fields/Hisense_ASM__c.field-meta.xml
<CustomField>
    <fullName>Hisense_ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hisense ASM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>