force-app/main/default/objects/Account/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <inlineHelpText>Financial required</inlineHelpText>
    <label>Hisense Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hisense_Entity</valueSetName>
    </valueSet>
</CustomField>