force-app/main/default/objects/Account/fields/Hisense_RSM__c.field-meta.xml
<CustomField>
    <fullName>Hisense_RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hisense RSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>