force-app/main/default/objects/Account/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z15</fullName>
                <label>统一社会信用代码</label>
            </value>
            <value>
                <fullName>Z25</fullName>
                <label>公司注册号（大陆外公司使用）</label>
            </value>
            <value>
                <fullName>Z35</fullName>
                <label>身份证明</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>