force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>HVAC attribution</inlineHelpText>
    <label>Industry Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCAC</fullName>
            </value>
            <value>
                <fullName>VRF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>