force-app/main/default/objects/Account/fields/Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sector__c</fullName>
    <label>Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>各种的控股公司</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>财务服务</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>房地产</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>能源 / 分销</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>石油煤气</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>原材料</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>贵金属</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>化工行业</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>健康</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>玻璃</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>构筑工业</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>建筑供应商</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>纸和纸浆</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>木材及基础结构</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>纺织厂纺织制造厂及纺织品厂</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>服装</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>熨斗及钢铁</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>交通工具</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>交通工具供应商</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>机械工程</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>专科的机械工程</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>机床工程</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>航行器构建</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>酿酒厂饮料烟草</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>营养</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>电工 / 电机工程</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>计算机及数据处理</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>软件</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>远程通讯</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>消费品</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>