force-app/main/default/objects/Account/fields/Is_Listed_Company__c.field-meta.xml
<CustomField>
    <fullName>Is_Listed_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Listed Company?</label>
    <type>Checkbox</type>
</CustomField>