force-app/main/default/objects/Account/fields/isGoFinApprove__c.field-meta.xml
<CustomField>
    <fullName>isGoFinApprove__c</fullName>
    <label>goApproveStep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fin_approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>