force-app/main/default/objects/Account/fields/IsUsedForBackground__c.field-meta.xml
<CustomField>
    <fullName>IsUsedForBackground__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUsedForBackGround</label>
    <type>Checkbox</type>
</CustomField>