force-app/main/default/objects/Account/fields/Japan_Unlock_Tag__c.field-meta.xml
<CustomField>
    <fullName>Japan_Unlock_Tag__c</fullName>
    <label>Japan Unlock Tag</label>
    <type>DateTime</type>
</CustomField>