force-app/main/default/objects/Account/fields/KDGRP__c.field-meta.xml
<CustomField>
    <fullName>KDGRP__c</fullName>
    <label>Customer group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>industry</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>retail</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <label>Free Zone (PA)</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>Local (PA)</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <label>Foreign Source (PA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>