force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SR</fullName>
                <label>塞尔维亚语</label>
            </value>
            <value>
                <fullName>ZH</fullName>
                <label>中文</label>
            </value>
            <value>
                <fullName>TH</fullName>
                <label>泰语</label>
            </value>
            <value>
                <fullName>KO</fullName>
                <label>韩语</label>
            </value>
            <value>
                <fullName>RO</fullName>
                <label>罗马尼亚语</label>
            </value>
            <value>
                <fullName>SL</fullName>
                <label>斯洛文尼亚语</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <label>克罗地亚语</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>马来语</label>
            </value>
            <value>
                <fullName>UK</fullName>
                <label>乌克兰语</label>
            </value>
            <value>
                <fullName>ET</fullName>
                <label>爱沙尼亚语</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>阿拉伯语</label>
            </value>
            <value>
                <fullName>HE</fullName>
                <label>希伯来语</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>捷克语</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>德语</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <default>true</default>
                <label>英语</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>法语</label>
            </value>
            <value>
                <fullName>EL</fullName>
                <label>希腊语</label>
            </value>
            <value>
                <fullName>HU</fullName>
                <label>匈牙利语</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>意大利语</label>
            </value>
            <value>
                <fullName>JA</fullName>
                <label>日语</label>
            </value>
            <value>
                <fullName>DA</fullName>
                <label>丹麦语</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>波兰语</label>
            </value>
            <value>
                <fullName>ZF</fullName>
                <label>繁体中文</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>荷兰语</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>挪威语</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>葡萄牙语</label>
            </value>
            <value>
                <fullName>SK</fullName>
                <label>斯洛伐克语</label>
            </value>
            <value>
                <fullName>RU</fullName>
                <label>俄语</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>西班牙语</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>土耳其语</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>