force-app/main/default/objects/Account/fields/Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version__c</fullName>
    <label>Latest Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>