force-app/main/default/objects/Account/fields/Listed_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Listed_Company_Code__c</fullName>
    <label>Listed Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>