force-app/main/default/objects/Account/fields/Location_No_1__c.field-meta.xml
<CustomField>
    <fullName>Location_No_1__c</fullName>
    <label>Global Location Number 1</label>
    <length>7</length>
    <type>Text</type>
</CustomField>