force-app/main/default/objects/Account/fields/Location_No_2__c.field-meta.xml
<CustomField>
    <fullName>Location_No_2__c</fullName>
    <label>Global Location Number 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>