force-app/main/default/objects/Account/fields/Main_Business_Scope__c.field-meta.xml
<CustomField>
    <fullName>Main_Business_Scope__c</fullName>
    <label>Main Business Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Home appliance</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>General merchandise</fullName>
            </value>
            <value>
                <fullName>Necessities</fullName>
            </value>
            <value>
                <fullName>APPAREL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>