force-app/main/default/objects/Account/fields/Management_Area__c.field-meta.xml
<CustomField>
    <fullName>Management_Area__c</fullName>
    <description>For Malaysia</description>
    <inlineHelpText>For Hisense Malaysia use only.</inlineHelpText>
    <label>Management Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>物流部</fullName>
            </value>
            <value>
                <fullName>Emalaysia</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
            <value>
                <fullName>Malaca</fullName>
            </value>
            <value>
                <fullName>Ecoast</fullName>
            </value>
            <value>
                <fullName>Perak</fullName>
            </value>
            <value>
                <fullName>市场部</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>服务部</fullName>
            </value>
            <value>
                <fullName>SINGAPORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>