force-app/main/default/objects/Account/fields/Marketing_Model__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Model__c</fullName>
    <description>营销模式</description>
    <label>Marketing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Model</valueSetName>
    </valueSet>
</CustomField>