force-app/main/default/objects/Account/fields/Natural_Person_or_Not__c.field-meta.xml
<CustomField>
    <fullName>Natural_Person_or_Not__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否是自然人</description>
    <label>Natural Person or Not</label>
    <type>Checkbox</type>
</CustomField>