force-app/main/default/objects/Account/fields/Order_Way__c.field-meta.xml
<CustomField>
    <fullName>Order_Way__c</fullName>
    <label>接单方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>WEB（B2B）</fullName>
            </value>
            <value>
                <fullName>WEBEDI</fullName>
            </value>
            <value>
                <fullName>その他（＋コメント）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>