force-app/main/default/objects/Account/fields/Other_Delivery_Way__c.field-meta.xml
<CustomField>
    <fullName>Other_Delivery_Way__c</fullName>
    <label>其他交货方式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>